fix: z-index on sticky header

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -141,3 +141,7 @@
     @apply bg-background text-foreground;
   }
 }
+
+.z-max {
+  z-index: 999;
+}
